making login, register api